--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-activitylog": "^4.5",
         "yajra/laravel-datatables-oracle": "^10.1"
     },
     "require-dev": {
