--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,11 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ACTIVITY_LOGGER_ENABLED=true
+ACTIVITY_LOGGER_DB_CONNECTION=activityDB
+activityDB_HOST=127.0.0.1
+activityDB_PORT=3306
+activityDB_DATABASE=activity
+activityDB_USERNAME=root
+activityDB_PASSWORD=
