--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "spatie/laravel-activitylog": "^4.5",
+        "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables-oracle": "^10.1"
     },
     "require-dev": {
